--- a/app/src/main/res/layout/switch_layout.xml
+++ b/app/src/main/res/layout/switch_layout.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/switchRelativeLayout"
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal" >
+    android:clickable="true"
+    android:focusable="true"
+    android:orientation="horizontal">
 
-    <Switch
+    <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/switchAB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:checked="false" />
+        android:checked="false"
+        android:background="@color/white"
+        app:track="@drawable/switch_track"
+        android:thumb="@drawable/my_switch_toggle" />
 </RelativeLayout>
