--- a/app/src/main/res/layout/fragment_event_detail.xml
+++ b/app/src/main/res/layout/fragment_event_detail.xml
@@ -26,23 +26,59 @@
                     app:layout_constraintTop_toTopOf="parent"/>
 
                 <TextView
-                    android:id="@+id/eventTitle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/title"
-                    android:textColor="@color/black"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/eventImage" />
-
-                <TextView
                     android:id="@+id/eventDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:text="@string/date"
-                    android:textColor="@color/black"
+                    android:textColor="@color/goldenrod"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/eventTitle" />
+                    app:layout_constraintTop_toBottomOf="@id/eventImage" />
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/pfpImgProfile"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginVertical="10dp"
+                    android:innerRadius="0dp"
+                    android:shape="ring"
+                    android:thicknessRatio="1.9"
+                    app:cardCornerRadius="15dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/eventDate">
+
+                    <ImageView
+                        android:id="@+id/pfpImgProfileSrc"
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        android:contentDescription="@string/profile_image"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/splash"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                </androidx.cardview.widget.CardView>
+                <TextView
+                    android:id="@+id/author"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/author"
+                    android:textColor="@color/black"
+                    android:layout_marginStart="20dp"
+                    app:layout_constraintStart_toEndOf="@id/pfpImgProfile"
+                    app:layout_constraintTop_toTopOf="@id/pfpImgProfile"
+                    app:layout_constraintBottom_toBottomOf="@id/pfpImgProfile"
+                    android:textStyle="bold"/>
+
+                <TextView
+                    android:id="@+id/usersAttending"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:text="@string/users_attending"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/author" />
 
                 <ImageButton
                     android:id="@+id/adminButton"
@@ -63,7 +99,7 @@
                     android:text="@string/location"
                     android:textColor="@color/black"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/eventDate" />
+                    app:layout_constraintTop_toBottomOf="@id/usersAttending" />
 
                 <CheckBox
                     android:id="@+id/remoteBox"
