show spinner when loading shoutouts

--- a/app/src/main/res/layout/fragment_shoutouts_tabs.xml
+++ b/app/src/main/res/layout/fragment_shoutouts_tabs.xml
@@ -114,5 +114,18 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:targetApi="lollipop" />
         </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/greyBackground"
+            android:id="@+id/loadingSpinner">
+
+            <ProgressBar
+                style="?android:attr/progressBarStyleLarge"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_centerInParent="true" />
+        </RelativeLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
