--- a/app/src/main/res/layout/fragment_event_detail.xml
+++ b/app/src/main/res/layout/fragment_event_detail.xml
@@ -91,11 +91,22 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/eventImage" />
 
+                <ImageButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toBottomOf="@id/adminButton"
+                        app:flow_horizontalAlign="center"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_marginEnd="20dp"
+                        android:backgroundTint="@color/transparent"
+                        android:src="@drawable/ic_baseline_calendar_today_24"
+                        android:id="@+id/export" />
+
                 <TextView
                     android:id="@+id/eventLocation"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="8dp"
                     android:text="@string/location"
                     android:textColor="@color/black"
                     app:layout_constraintStart_toStartOf="parent"
@@ -247,6 +258,19 @@
                         app:layout_constraintStart_toEndOf="@id/discussionTag"
                         app:layout_constraintTop_toTopOf="parent" />
                 </com.google.android.material.chip.ChipGroup>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/transparent"
+                    android:id="@+id/loadingSpinner">
+
+                    <ProgressBar
+                        style="?android:attr/progressBarStyleLarge"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_centerInParent="true" />
+                </RelativeLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
