--- a/app/src/main/res/layout/fragment_create_announcement.xml
+++ b/app/src/main/res/layout/fragment_create_announcement.xml
@@ -75,6 +75,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/post_to_facebook"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/postNewAnnouncementBtn" />
 
@@ -83,6 +84,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/send_to_listserv"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="@+id/postToFb"
             app:layout_constraintTop_toBottomOf="@id/postToFb" />
     </androidx.constraintlayout.widget.ConstraintLayout>
